k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudapp
  labels:
    name: cloudapp
    environment: dev
    project: cloud-native-app
